Fix h1 letter spacing

--- a/style.css
+++ b/style.css
@@ -762,7 +762,7 @@ ul.debug-menu {
 .main-about,
 .main-subscribe,
 .contact-us {
-  margin-top: 32px;
+  margin-top: 22px;
 }
 .main_footer {
     margin-top: 48px;
